Updated example env and readme

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-BOT_TOKEN=your_telegram_bot_token
-TMDB_API_KEY=your_tmdb_api_key
-DATABASE_URL=postgresql+asyncpg://user:pass@host:port/movies_db
-DATABASE_SYNC_URL=postgresql+psycopg2://user:pass@host:port/movies_db
+BOT_TOKEN = "your_telegram_bot_token"
+TMDB_API_KEY = "your_tmdb_api_key"
+DATABASE_URL = "postgresql+asyncpg://user:pass@host:port/db"
+DATABASE_SYNC_URL = "postgresql+psycopg2://user:pass@host:port/db"
+POSTGRES_USER = "postgres_user"
+POSTGRES_PASSWORD = "postgres_pass"
+POSTGRES_DB = "postgres_db"
